# django-template

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: pr.yml
docker/: Dockerfile
scripts/: entrypoint.sh
src/: manage.py  pytest.ini
src/apps/accounts/: admin.py  managers.py  urls.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/models/: user.py
src/apps/accounts/serializers/: login.py
src/apps/accounts/views/: login.py
src/apps/utils/: exceptions.py  messages.py  paginations.py  responses.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py  development.py  logging.py  production.py  rest.py  schema.py
src/tests/: test_sample.py
