[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["mohammadhssn <mohammadhssnalizadeh78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-split-settings = "^1.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
